Add templates to import repo dialog
